# Model-BoussinesqShellTC

./: .gitignore  .gitlab-ci.yml  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  Doxyfile  Makefile  README.md  Readme.md  boussinesq_fplane3dqg.py  ca_base13.crt
.ycm_data/: README
Executables/: CMakeLists.txt  GenerateState.cpp  RunSimulation.cpp  VisualizeState.cpp  WriteConfig.cpp
TestSuite/: CMakeLists.txt  ConfigExplicit.tar.gz.sha256  Explicit.tar.gz.sha256  Explicit_split_equation.tar.gz.sha256  SparseLinearSolverTest.cpp  StabilityConfigExplicit.tar.gz.sha256  StateExplicit.tar.gz.sha256  TemplateTest.cpp  TemplateTestSourcesList.cmake  VisualizationExplicit.tar.gz.sha256  bilaplacian1D_A.mtx  bilaplacian1D_rhs.mtx  bilaplacian1D_sol.mtx  bilaplacian2D_A.mtx  bilaplacian2D_rhs.mtx  bilaplacian2D_sol.mtx  bilaplacian3D_A.mtx  bilaplacian3D_rhs.mtx  bilaplacian3D_sol.mtx  laplacian1D_A.mtx  laplacian1D_rhs.mtx  laplacian1D_sol.mtx  laplacian2D_A.mtx  laplacian2D_rhs.mtx  laplacian2D_sol.mtx  makeTest.sh  validate_benchmark_Explicit.py  validate_benchmark_Explicit_split_equation.py  validate_stability_config_benchmark_Explicit.py  validate_visualization_benchmark_Explicit.py
TestSuite/Base/: MultiplePrecisionTest.cpp  PrecisionTest.cpp
TestSuite/Bash/: benchmark_build.sh  benchmark_run.sh  test_build.sh
TestSuite/Communicators/: Communicator1DTest.cpp  Communicator2DTest.cpp  Communicator3DTest.cpp
TestSuite/EigenSolver/: ArpackEigenSolverTest.cpp  EigenSolverTest.cpp
TestSuite/EigenSolver/cmake.d/: ArpackEigenSolverTestSourcesList.cmake  EigenSolverTestSourcesList.cmake
TestSuite/FastTransforms/: AnnulusChebyshevTransformTest.cpp  CShellChebyshevTransformTest.cpp  ChebyshevFftwTransformTest.cpp  ChebyshevFftwTransformTestSourcesList.cmake  ChebyshevTransformTest.cpp  CylindricalChebyshevFftwTransformTest.cpp  CylindricalChebyshevTransformTest.cpp  FftSetupTest.cpp  FftSetupTestSourcesList.cmake  FftTransformTest.cpp  FftwSetupTest.cpp  FftwToolsTest.cpp  FftwToolsTestSourcesList.cmake  FftwTransformTest.cpp  FftwTransformTestSourcesList.cmake  SShellChebyshevTransformTest.cpp  ShellChebyshevTransformTest.cpp  SphericalChebyshevFftwTransformTest.cpp  SphericalChebyshevTransformTest.cpp
TestSuite/FastTransforms/cmake.d/: AnnulusChebyshevTransformTestSourcesList.cmake  CShellChebyshevTransformTestSourcesList.cmake  ChebyshevFftwTransformTestSourcesList.cmake  ChebyshevTransformTestSourcesList.cmake  CylindricalChebyshevFftwTransformTestSourcesList.cmake  CylindricalChebyshevTransformTestSourcesList.cmake  FftTransformTestSourcesList.cmake  FftwTransformTestSourcesList.cmake  SShellChebyshevTransformTestSourcesList.cmake  ShellChebyshevTransformTestSourcesList.cmake  SphericalChebyshevFftwTransformTestSourcesList.cmake  SphericalChebyshevTransformTestSourcesList.cmake
TestSuite/Framework/: FrameworkTest.cpp  MpiFrameworkTest.cpp  SerialFrameworkTest.cpp
TestSuite/IoAscii/: AsciiFileTest.cpp  DirectAsciiWriterTest.cpp  StdOutPipeTest.cpp
TestSuite/IoBinary/: BinaryFileTest.cpp  DirectBinaryWriterTest.cpp
TestSuite/IoConfig/: ConfigurationReaderTest.cpp  ConfigurationWriterTest.cpp
TestSuite/IoConfig/cmake.d/: ConfigurationReaderTestSourcesList.cmake  ConfigurationWriterTestSourcesList.cmake
TestSuite/IoControl/: ControlFileTest.cpp  ControlInterfaceTest.cpp
TestSuite/IoHdf5/: Hdf5FileTest.cpp
TestSuite/IoTools/: FormatterTest.cpp
TestSuite/IoVariable/: StateFileReaderTest.cpp  StateFileWriterTest.cpp  VisualizationFileWriterTest.cpp
TestSuite/IoVariable/cmake.d/: StateFileReaderTestSourcesList.cmake  StateFileWriterTestSourcesList.cmake  (+1 more)
TestSuite/IoXml/: XmlFileTest.cpp
TestSuite/LoadSplitter/: LoadSplitterTest.cpp
TestSuite/PolynomialTransforms/: AssociatedLegendreTransformTest.cpp  WorlandTransformTest.cpp
TestSuite/Profiler/: MpiProfilerTest.cpp  ProfilerToolsTest.cpp  SerialProfilerTest.cpp
TestSuite/Resolutions/: CoreResolutionTest.cpp  ResolutionTest.cpp  SimulationResolutionTest.cpp  TransformResolutionTest.cpp
TestSuite/ScalarFields/: FlatLayoutTest.cpp  FlatScalarFieldTest.cpp  ScalarField1DTest.cpp  ScalarField2DTest.cpp  ScalarField3DTest.cpp  ScalarFieldSetupTest.cpp  ScalarFieldTest.cpp  SlicedLayoutTest.cpp  SlicedScalarFieldTest.cpp
TestSuite/Simulation/: SimulationIoControlTest.cpp  SimulationRunControlTest.cpp
TestSuite/SparseSolvers/: BiCGSTABIterativeSolverTest.cpp  MKLPardisoDirectSolverTest.cpp  PardisoDirectSolverTest.cpp  SPQRDirectSolverTest.cpp  SparseLUDirectSolverTest.cpp  SparseLinearSolverTest.cpp  SparseQRDirectSolverTest.cpp  SparseSolverTest.cpp  SuperLUDirectSolverTest.cpp  UmfPackDirectSolverTest.cpp
TestSuite/SpatialSchemes/: CFTSchemeTest.cpp  FFFSchemeTest.cpp  SLFSchemeTest.cpp  SpatialSchemeTest.cpp  TFFSchemeTest.cpp  TFTSchemeTest.cpp  TTTSchemeTest.cpp  WFTSchemeTest.cpp  WLFSchemeTest.cpp
TestSuite/SpectralOperators/: CFTTauOperatorTest.cpp  ChebyshevBoundaryTest.cpp  ChebyshevOperatorTest.cpp  CylindricalChebyshevBoundaryTest.cpp  CylindricalChebyshevOperatorTest.cpp  FFFTauOperatorTest.cpp  PeriodicOperatorTest.cpp  SLFTauOperatorTest.cpp  SphericalChebyshevBoundaryTest.cpp  SphericalChebyshevOperatorTest.cpp  SphericalHarmonicOperatorTest.cpp  TFFTauOperatorTest.cpp  TFTTauOperatorTest.cpp  TTTTauOperatorTest.cpp  UnitOperatorTest.cpp  WFTTauOperatorTest.cpp  WLFTauOperatorTest.cpp
TestSuite/StorageProfiler/: StorageProfilerTest.cpp  StorageProfilerToolsTest.cpp
TestSuite/StorageProviders/: StoragePairProviderTest.cpp  StorageProviderTest.cpp
TestSuite/Timers/: ExecutionTimerTest.cpp  MpiTimerTest.cpp  SerialTimerTest.cpp  TimerTest.cpp
TestSuite/Timersteppers/: EquationDTimestepperTest.cpp  EquationZTimestepperTest.cpp  TimestepperTest.cpp
TestSuite/TransformCoordinators/: Transform1DCoordinatorTest.cpp  Transform2DCoordinatorTest.cpp  Transform3DCoordinatorTest.cpp
TestSuite/Variables/: ScalarVariableTest.cpp  VectorVariableTest.cpp
TestSuite/VectorFields/: FlatVectorFieldTest.cpp  SlicedVectorFieldTest.cpp  VectorFieldTest.cpp  VectorFieldTestSourcesList.cmake
(+3356 files in other folders)
